# cross-exec-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
examples/: cargo-version.rs  cargo-wrapper.rs
src/: lib.rs
